testdata/language-features/basic-values/case03.reject.out
type error: can not unify
[32m'Int[m
with
[32m'Tuple0[m

in "testdata/language-features/basic-values/case03.reject.lc" (line 1, column 15):
value1 = case () of
              ^^
